updated theme, added some pics and backstretch.js

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,9 +1,12 @@
 body {
   padding: 50px;
 }
-.basic{
+.basic {
   padding: 40px 5px;
   text-align: left;
 }
 
-
+.basic-center {
+  text-align: center;
+  padding: 40px 5px;
+}
