made welcome text skinny

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,7 +19,7 @@
 
 .basic-center a {
   color:#ffffff;
-  font-weight: lighter;
+  font-weight: 100;
   font-size: 70px;
   letter-spacing: 15px;
 }
